samples/SEMANTIC_ERROR/fcall_scopes_err2.php
<?php
declare(strict_types=1);
$b = 3;
function foo(int $i) : int
{
    return $b;
}